# WorldMirror-chatbot-frontend

./: .env.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/: package.json  tsconfig.json  vite.config.ts
checks/: registry.yml  runner.ts
docs/: README.md
playwright-report/: index.html
scripts/: with-node-22.sh
skills/: README.md
test-results/: .last-run.json
test-results/extensions-indexing-Extens-b9d16-alls-a-git-extension-via-UI-chromium/: error-context.md
test-results/extensions-indexing-Indexi-c313f-exing-and-see-completed-job-chromium/: error-context.md
test-results/plugins-Plugins-Management-d9491--plugin-and-allows-toggling-chromium/: error-context.md
tests/: setup.ts
tests/e2e/: README.md  chat.spec.ts  extensions-indexing.spec.ts  helpers.ts  logs.spec.ts  plugins.spec.ts
tests/helpers/: mockHttpServer.ts
tests/integration/: characters.spec.ts  chatHistory.spec.ts  chatSse.spec.ts  config.spec.ts  extensions-indexer.spec.ts  groups.spec.ts  indexer.pipeline.spec.ts  lorebooks.spec.ts  memory.spec.ts  plugins.spec.ts  samplerPresets.spec.ts  triggers.spec.ts
tests/unit/: anthropicProvider.spec.ts  autoCapture.spec.ts  cardParser.spec.ts  chatPipeline.spec.ts  chunkers.spec.ts  commands.spec.ts  groupChatTurnSelection.spec.ts  hooks.spec.ts  (+19 more)
(+69 files in other folders)
